--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "html-escaper": "^3.0.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -24,6 +28,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.42.1",
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
